src/syn/snapshots/tvm__syn__tests__bad_assign.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n    0 = 1;\n  \"#)"
---
error: invalid assignment target
1 |  0 = 1;
  |  ^

